# slimg

./: .gitmodules  Cargo.toml  Cross.toml  README.ko.md  README.md  THIRD_PARTY_LICENSES.md  about.hbs  about.toml  dist-workspace.toml
.github/ci/: build-setup.yml
.github/workflows/: build-libjxl-prebuilt.yml  build-setup.yml  kotlin-bindings.yml  kotlin-release.yml  publish.yml  python-bindings.yml  release-gui.yml  release.yml
bindings/kotlin/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
bindings/kotlin/src/main/kotlin/io/clroot/slimg/: Slimg.kt  SlimgImage.kt  SlimgStreams.kt  slimg_ffi.kt
bindings/kotlin/src/test/kotlin/io/clroot/slimg/: SlimgImageTest.kt  SlimgObjectTest.kt  SlimgStreamsTest.kt  SlimgTest.kt
bindings/python/: .gitignore  README.md  pyproject.toml
bindings/python/slimg/: __init__.py  _types.py
bindings/python/tests/: conftest.py  test_convert.py  test_decode.py  test_format.py  test_operations.py  test_optimize.py
bindings/scripts/: patch-generated-kotlin.sh
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: convert.rs  crop.rs  extend.rs  mod.rs  optimize.rs  resize.rs
crates/libjxl-enc-sys/: Cargo.toml  build.rs
crates/libjxl-sys/: Cargo.toml  build.rs
crates/slimg-core/: Cargo.toml  README.md
crates/slimg-core/benches/: codec_bench.rs  pipeline_bench.rs
crates/slimg-core/src/: codec.rs  crop.rs  error.rs  extend.rs  format.rs  lib.rs  pipeline.rs  resize.rs
crates/slimg-core/src/codec/: avif.rs  jpeg.rs  jxl.rs  mod.rs  png.rs  qoi.rs  webp.rs
crates/slimg-core/src/codec/jxl/: decoder.rs  encoder.rs  mod.rs  types.rs
crates/slimg-core/tests/: integration.rs
crates/slimg-ffi/: Cargo.toml  uniffi.toml
crates/slimg-ffi/src/: lib.rs
docs/: benchmarks.md  usage.ko.md  usage.md
docs/plans/: 2026-02-17-slimg-design.md  2026-02-17-slimg-implementation.md  2026-02-18-benchmark-design.md  2026-02-18-benchmark-implementation.md  2026-02-18-crop-feature-design.md  2026-02-18-crop-feature-implementation.md  2026-02-18-extend-feature-design.md  2026-02-18-extend-feature-implementation.md  2026-02-18-kotlin-bindings-design.md  2026-02-18-kotlin-bindings-implementation.md  2026-02-18-native-bundling-design.md  2026-02-18-native-bundling-implementation.md  2026-02-19-jxl-encoding-design.md  2026-02-19-python-bindings-design.md  2026-02-19-python-bindings-plan.md  2026-02-20-tauri-gui-design.md  2026-02-20-tauri-gui-implementation.md
gui/: index.html  package.json
gui/src/: App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: commands.rs  lib.rs  main.rs
gui/src/components/: BatchList.tsx  DropZone.tsx  ImagePreview.tsx  OptionsPanel.tsx  ProcessResultCard.tsx  Settings.tsx  Sidebar.tsx
gui/src/components/options/: ConvertOptions.tsx  CropOptions.tsx  ExtendOptions.tsx  FormatSelect.tsx  OptimizeOptions.tsx  QualitySlider.tsx  ResizeOptions.tsx
gui/src/hooks/: useBatchProcess.ts  useImageProcess.ts  useSettings.ts
gui/src/lib/: format.ts  path.ts  tauri.ts
