[package]
name = "slimg"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Image optimization CLI — convert, optimize, resize"
repository = "https://github.com/clroot/slimg"
homepage = "https://github.com/clroot/slimg"

[dependencies]
slimg-core = { path = "../crates/slimg-core" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1"
rayon = "1.11.0"
indicatif = "0.18.4"

[dev-dependencies]
tempfile = "3.25.0"
