[package]
name = "slimg"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "Image optimization CLI — convert, compress, and resize images using MozJPEG, OxiPNG, WebP, AVIF, and QOI"
repository = "https://github.com/clroot/slimg"
homepage = "https://github.com/clroot/slimg"
readme = "../README.md"
keywords = ["image", "optimization", "cli", "compression", "webp"]
categories = ["multimedia::images", "command-line-utilities"]

[dependencies]
slimg-core = { version = "0.5.0", path = "../crates/slimg-core" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1"
rayon = "1.11.0"
indicatif = "0.18.4"

[dev-dependencies]
tempfile = "3.25.0"
