[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "slimg"
version = "0.5.0"
requires-python = ">=3.9"
description = "Fast image optimization library powered by Rust"
readme = "README.md"
license = { text = "MIT" }
keywords = ["image", "optimization", "compression", "webp", "avif", "jpeg", "png"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]

[project.urls]
Homepage = "https://github.com/clroot/slimg"
Repository = "https://github.com/clroot/slimg"
Issues = "https://github.com/clroot/slimg/issues"

[tool.maturin]
manifest-path = "../../crates/slimg-ffi/Cargo.toml"
bindings = "uniffi"
python-source = "."
module-name = "slimg._lowlevel"
