[package]
name = "slimg-libjxl-sys"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Minimal FFI bindings to libjxl encoder/decoder (vendored, BSD-3-Clause)"
repository = "https://github.com/clroot/slimg"
homepage = "https://github.com/clroot/slimg"
links = "jxl"

[build-dependencies]
cmake = "0.1"
cc = "1"
bindgen = "0.71"
