[package]
name = "slimg-core"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Image optimization library — encode, decode, convert, resize"

[dependencies]
image = { version = "0.25", features = ["avif-native"] }
mozjpeg = "0.10"
oxipng = { version = "10", default-features = false, features = ["parallel", "zopfli"] }
imgref = "1"
rapid-qoi = "0.6"
ravif = "0.13"
rgb = "0.8"
thiserror = "2"
webp = { version = "0.3", default-features = false }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "codec_bench"
harness = false

[[bench]]
name = "pipeline_bench"
harness = false
