[package]
name = "slimg-core"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "Image optimization library — encode, decode, convert, resize with MozJPEG, OxiPNG, WebP, AVIF, and QOI"
repository = "https://github.com/clroot/slimg"
homepage = "https://github.com/clroot/slimg"
readme = "README.md"
keywords = ["image", "optimization", "compression", "webp", "avif"]
categories = ["multimedia::images", "encoding"]

[dependencies]
image = { version = "0.25", features = ["avif-native"] }
libjxl-enc-sys = { path = "../libjxl-enc-sys" }
mozjpeg = "0.10"
oxipng = { version = "10", default-features = false, features = ["parallel", "zopfli"] }
imgref = "1"
rapid-qoi = "0.6"
ravif = "0.13"
rgb = "0.8"
thiserror = "2"
webp = { version = "0.3", default-features = false }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "codec_bench"
harness = false

[[bench]]
name = "pipeline_bench"
harness = false
